feat(metal): deploy Barbican service
This change deploys the OpenStack Barbican secret management service, and integrates it with Cinder and Nova to allow encrypted volumes + automatic decryption by instances.

Closes #23

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/122

--- a/metal/roles/openstack/cinder/defaults/main.yml
+++ b/metal/roles/openstack/cinder/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 cinder_kolla_venv: /root/kolla-venv
+cinder_kolla_config_dir: /etc/kolla/config/cinder
 cinder_vgs:
   - cinder-premium
   - cinder-standard
