feat(metal): configure the root account's shell
This change configures the OpenStack host's bash shell to automatically
activate the Python venv, and source OpenStack admin credentials. This
greatly improves the UX by allowing the admin to login and immediately
start running OpenStack commands.

Closes #30

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/124

--- a/metal/roles/openstack/deploy_kolla/handlers/post-deploy.yml
+++ b/metal/roles/openstack/deploy_kolla/handlers/post-deploy.yml
@@ -9,3 +9,11 @@
     src: /etc/kolla/clouds.yaml
     dest: "{% if ci_pipeline == 'true' %}{{ playbook_dir }}/tests/output/{% else %}{{ playbook_dir }}/output/{% endif %}"
     flat: true
+
+- name: Assert shell configuration in '.bash_profile'
+  ansible.builtin.blockinfile:
+    path: /root/.bash_profile
+    prepend_newline: true
+    block: |
+      source {{ kolla_venv }}/bin/activate
+      source /etc/kolla/admin-openrc.sh
