--- a/cluster/platform/postgres-operator/crunchy-pgo.yaml
+++ b/cluster/platform/postgres-operator/crunchy-pgo.yaml
@@ -16,7 +16,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      version: "5.6.x"
+      version: "5.6.0"
       chart: pgo
       sourceRef:
         kind: HelmRepository
