--- a/.gitlab/templates/build-docs.yml
+++ b/.gitlab/templates/build-docs.yml
@@ -6,13 +6,13 @@ pages:
     name: docker.io/squidfunk/mkdocs-material:9
     entrypoint: [""]
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_TAG
       changes:
         - .gitlab-ci.yml
         - .gitlab/templates/build-docs.yml
         - docs/**/*
   script:
-    - mkdocs build --config-file docs/mkdocs.yml --site-dir ../public
+    - mkdocs build --config-file docs/mkdocs.yml --site-dir ${CI_PROJECT_DIR}/public
   artifacts:
     paths:
       - public
