refactor(metal): improve networking capabilities and config
This refactoring effort implements the following changes:

- Implement configuration options to allow for multiple VLAN provider networks (external only for now).
- Implement a configuration option to toggle Designate recursive lookup on/off.
- Use Ansible to automatically manage the network configuration in Kolla's `globals.yml` file.
- Various changes to the default network configuration.
- Update documentation to match changes.

Overall this refactor simplifies the configuration, while also drastically increasing the OpenStack deployment's networking capabilities.

Closes #17

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/129

--- a/metal/roles/openstack/defaults/tasks/coe_templates.yml
+++ b/metal/roles/openstack/defaults/tasks/coe_templates.yml
@@ -13,7 +13,7 @@
 
 - name: Stat the public network
   openstack.cloud.networks_info:
-    name: "{{ public_network_name }}"
+    name: "{{ external_networks.networks[0].name }}"
     cloud: kolla-admin
   environment:
     OS_CLIENT_CONFIG_FILE: /etc/kolla/clouds.yaml
@@ -34,7 +34,6 @@
     coe: kubernetes
     docker_storage_driver: overlay2
     docker_volume_size: 40
-    dns_nameserver: "{{ ansible_default_ipv4.address }}"
     volume_driver: cinder
     network_driver: flannel
     server_type: vm
