--- a/metal/roles/openstack/bootstrap_host/tasks/files.yml
+++ b/metal/roles/openstack/bootstrap_host/tasks/files.yml
@@ -10,10 +10,10 @@
     force: false
   notify: generate_passwords
 
-- name: Assert '/etc/kolla/globals.yml'
-  ansible.builtin.copy:
-    src: "{{ playbook_dir }}/vars/globals.yml"
-    dest: /etc/kolla/
+- name: Template '/etc/kolla/globals.yml'
+  ansible.builtin.template:
+    src: "globals.yml.j2"
+    dest: /etc/kolla/globals2.yml
     owner: "{{ ansible_user }}"
     group: "{{ ansible_user }}"
     mode: 0644
