--- a/metal/roles/rhel9/kickstart/vars/main.yml
+++ b/metal/roles/rhel9/kickstart/vars/main.yml
@@ -1,10 +1,10 @@
 ---
 rocky_install_disk: "{{ '/dev/vdb' if ci_pipeline else storage.root_device }}"
 rocky_ssh_public_key: "{{ lookup('ansible.builtin.file', common.ssh_pubkey_file) }}"
-rocky_interface_one: "{{ network_interface }}"
-rocky_interface_two: "{{ neutron_external_interface }}"
-rocky_ip_address: "{{ kolla_internal_vip_address }}"
-rocky_subnet_mask: "{{ network.public_subnet_cidr | ansible.utils.ipaddr('netmask') }}"
-rocky_gateway_ip: "{{ network.public_subnet_gateway_ip }}"
-rocky_dns_servers: "{{ network.public_dns_servers }}"
+rocky_interface_one: "{{ network.internal.interface }}"
+rocky_interface_two: "{{ network.external.interface }}"
+rocky_ip_address: "{{ network.internal.ip_address }}"
+rocky_subnet_mask: "{{ network.internal.network_cidr | ansible.utils.ipaddr('netmask') }}"
+rocky_gateway_ip: "{{ network.internal.gateway_addr }}"
+rocky_dns_servers: "{{ network.dns_servers }}"
 rocky_hostname: "{{ network.hostname }}.{{ network.domain }}"
