fix(metal): improve DMZ configuration
In order to make port forwarding easier, we've changed the default config for DMZ0 and DMZ1 to use /30 subnets. This means that each DMZ now has only one usable address besides the gateway, so only one floating IP / load balancer can be created in each DMZ, and it will always have the same IP address (.2).

Changes:

- Add external network config options for DHCP and DNS to accommodate the needs of the /30 subnet.
- Change DMZ0 and DMZ1 to /30 subnets.
- Add DMZ2 and DMZ3 with /24 subnets.
- Move the staging deployment to DMZ1.
- Minor adjustments as needed to accommodate the new networking config.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/130

--- a/metal/roles/openstack/defaults/handlers/main.yml
+++ b/metal/roles/openstack/defaults/handlers/main.yml
@@ -2,5 +2,6 @@
 - name: Restart 'neutron-server'
   community.docker.docker_container:
     name: neutron_server
+    state: healthy
     restart: true
   listen: restart_neutron_server
