feat(templates): add Windows Server 2019 builds
- Adds Packer templates for building cloud-ready Windows Server 2019 images.
- Adds a new documentation section with instructions on building and uploading.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/134

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -52,6 +52,7 @@ nav:
     - getting-started/prerequisites.md
     - getting-started/deploy-openstack.md
     - getting-started/cicd-configuration.md
+    - getting-started/windows-images.md
   - Deployment Environments:
     - environments/production.md
     - environments/development.md
