fix(metal): deployment FUBAR and other issues
Fixes a major issue with deployment. Somewhere along the line code was
committed that shouldn't have been, and it was untested since we're in
between released. Also fixes a couple of minor issues with the tests.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/139

--- a/metal/roles/openstack/bootstrap_host/tasks/files.yml
+++ b/metal/roles/openstack/bootstrap_host/tasks/files.yml
@@ -13,7 +13,7 @@
 - name: Template '/etc/kolla/globals.yml'
   ansible.builtin.template:
     src: "globals.yml.j2"
-    dest: /etc/kolla/globals2.yml
+    dest: /etc/kolla/globals.yml
     owner: "{{ ansible_user }}"
     group: "{{ ansible_user }}"
     mode: 0644
