--- a/metal/roles/openstack/bootstrap_host/tasks/main.yml
+++ b/metal/roles/openstack/bootstrap_host/tasks/main.yml
@@ -6,4 +6,14 @@
 - name: Include main tasks
   ansible.builtin.include_tasks: "{{ item }}"
   loop:
+    - packages.yml
     - files.yml
+    - octavia-certs.yml
+    - fixes.yml
+
+- name: Include CI Pipeline tasks
+  ansible.builtin.include_tasks: ci-pipeline.yml
+  when: ci_pipeline == "true"
+
+- name: Flush Handlers
+  ansible.builtin.meta: flush_handlers
