refactor(metal): migrate storage to Ceph
This MR implements Ceph using cephadm, and migrates all OpenStack storage backends to use Ceph.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/140

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -57,6 +57,9 @@ nav:
     - environments/production.md
     - environments/development.md
   - Managing OpenStack:
+    - Ceph:
+      - Benchmarking: managing-openstack/ceph/benchmarking.md
+      - Dashboard Access: managing-openstack/ceph/dashboard-access.md
     - Cinder:
       - Import/Export Volumes: managing-openstack/cinder/import-export-volumes.md
       - Troubleshooting: managing-openstack/cinder/troubleshooting.md
