--- a/metal/roles/openstack/cinder/tasks/prechecks.yml
+++ b/metal/roles/openstack/cinder/tasks/prechecks.yml
@@ -1,7 +1,4 @@
 ---
-- name: Checking LVM volume group(s) exists for Cinder
-  ansible.builtin.command: "vgs {{ cinder_vg }}"
+- name: Checking 'cinder-premium' volume group exists
+  ansible.builtin.command: vgs cinder-premium
   changed_when: false
-  loop: "{{ cinder_vgs }}"
-  loop_control:
-    loop_var: cinder_vg
