--- a/metal/roles/openstack/defaults/vars/main.yml
+++ b/metal/roles/openstack/defaults/vars/main.yml
@@ -1,4 +1,4 @@
 ---
 kolla_venv: "{{ common.kolla_venv }}"
 
-external_networks: "{{ network.external }}"
+external_networks: "{{ ci_pipeline_external_networks if ci_pipeline else network.external }}"
