ci(infra): refactor into parent-child pipelines
This MR refactors infrastructure deployments, turning them from a single hard-coded pipeline into dynamic parent-child pipelines. This allows for easy and effective scaling of deployments.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/141

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -53,9 +53,10 @@ nav:
     - getting-started/deploy-openstack.md
     - getting-started/cicd-configuration.md
     - getting-started/windows-images.md
-  - Deployment Environments:
-    - environments/production.md
-    - environments/development.md
+  - Managing Deployments:
+    - deployments/introduction.md
+    - deployments/main.md
+    - deployments/main-k8s.md
   - Managing OpenStack:
     - Ceph:
       - Benchmarking: managing-openstack/ceph/benchmarking.md
