feat(metal): enable Glance image decompression and conversion
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/145

--- a/metal/roles/openstack/bootstrap_host/tasks/main.yml
+++ b/metal/roles/openstack/bootstrap_host/tasks/main.yml
@@ -10,6 +10,7 @@
     - files.yml
     - octavia-certs.yml
     - fixes.yml
+    - config/glance.yml
 
 - name: Include CI Pipeline tasks
   ansible.builtin.include_tasks: ci-pipeline.yml
