--- a/metal/roles/openstack/bootstrap_host/tasks/main.yml
+++ b/metal/roles/openstack/bootstrap_host/tasks/main.yml
@@ -11,6 +11,7 @@
     - octavia-certs.yml
     - fixes.yml
     - config/glance.yml
+    - config/neutron.yml
 
 - name: Include CI Pipeline tasks
   ansible.builtin.include_tasks: ci-pipeline.yml
