--- a/metal/roles/openstack/bootstrap_host/vars/main.yml
+++ b/metal/roles/openstack/bootstrap_host/vars/main.yml
@@ -4,3 +4,4 @@
 kolla_venv: "{{ common.kolla_venv }}"
 
 kolla_networks: "{{ network }}"
+external_networks: "{{ ci_pipeline_external_networks if ci_pipeline else network.external }}"
