--- a/infra/modules/ignition/mediasrv/files/radarr.service
+++ b/infra/modules/ignition/mediasrv/files/radarr.service
@@ -17,7 +17,7 @@ ExecStart=/usr/bin/podman run -d --rm --replace \
     --label io.containers.autoupdate=registry \
     --name radarr \
     -v /srv/radarr:/config:Z \
-    -v /mnt:/media:z \
+    -v /var/mnt:/media:z \
     -e PUID=9032 \
     -e PGID=9030 \
     -e TZ="America/Vancouver" \
