--- a/infra/modules/ignition/mediasrv/files/sabnzbd.service
+++ b/infra/modules/ignition/mediasrv/files/sabnzbd.service
@@ -17,7 +17,7 @@ ExecStart=/usr/bin/podman run -d --rm --replace \
     --label io.containers.autoupdate=registry \
     --name sabnzbd \
     -v /srv/sabnzbd:/config:Z \
-    -v /mnt/usenet:/media/usenet:z \
+    -v /var/mnt/usenet:/media/usenet:z \
     -e TZ="America/Vancouver" \
     -e PUID=9030 \
     -e PGID=9030 \
